select linked option in UV editor is broken in some cases #63407

Closed
opened 2019-04-09 03:46:53 +02:00 by Massimiliano Puliero · 7 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 416.94

Blender Version
Broken: version: 2.80 (sub 54), branch: master, commit date: 2019-04-08 19:21, hash: df26f28835
Working: git.0e78e3038d02

Short description of error
UV select linked gives me this error:

bpy.ops.mesh.select_all(action='TOGGLE')
bpy.ops.uv.select_linked()
Traceback (most recent call last):

File "C:\Users\****\Desktop\blender-2.80.0-git.df26f28835fb-windows64\2.80\scripts\startup\bl_ui\space_image.py", line 162, in draw
  layout.operator("uv.select_linked").extend = False

AttributeError: 'UV_OT_select_linked' object has no attribute 'extend'

location: :-1

Traceback (most recent call last):

File "C:\Users\***\Desktop\blender-2.80.0-git.df26f28835fb-windows64\2.80\scripts\startup\bl_ui\space_image.py", line 162, in draw
  layout.operator("uv.select_linked").extend = False

AttributeError: 'UV_OT_select_linked' object has no attribute 'extend'

location: :-1

Please check the attached .blend file and try to "select linked" using CTRL+L or from the menu: select>>select linked.

thank you

selectlinkedbug.blend

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 416.94 **Blender Version** Broken: version: 2.80 (sub 54), branch: master, commit date: 2019-04-08 19:21, hash: `df26f28835` Working: git.0e78e3038d02 **Short description of error** UV select linked gives me this error: bpy.ops.mesh.select_all(action='TOGGLE') bpy.ops.uv.select_linked() Traceback (most recent call last): ``` File "C:\Users\****\Desktop\blender-2.80.0-git.df26f28835fb-windows64\2.80\scripts\startup\bl_ui\space_image.py", line 162, in draw layout.operator("uv.select_linked").extend = False ``` AttributeError: 'UV_OT_select_linked' object has no attribute 'extend' location: <unknown location>:-1 Traceback (most recent call last): ``` File "C:\Users\***\Desktop\blender-2.80.0-git.df26f28835fb-windows64\2.80\scripts\startup\bl_ui\space_image.py", line 162, in draw layout.operator("uv.select_linked").extend = False ``` AttributeError: 'UV_OT_select_linked' object has no attribute 'extend' location: <unknown location>:-1 Please check the attached .blend file and try to "select linked" using CTRL+L or from the menu: select>>select linked. thank you [selectlinkedbug.blend](https://archive.blender.org/developer/F6920651/selectlinkedbug.blend)

Added subscriber: @MassimilianoPuliero

Added subscriber: @MassimilianoPuliero
Campbell Barton was assigned by Sebastian Parborg 2019-04-09 19:53:43 +02:00
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

The exception can be fixed by removing the .extend. However, for some reason, the operator still does not work when that is fixed. This probably wasn't converted correctly for multi-object-editing, not sure yet.

The exception can be fixed by removing the `.extend`. However, for some reason, the operator still does not work when that is fixed. This probably wasn't converted correctly for multi-object-editing, not sure yet.

This issue was referenced by 701338d31c

This issue was referenced by 701338d31c7718ae64637c3fe24ddd03a977ae0c
Member

Added subscribers: @ideasman42, @lichtwerk

Added subscribers: @ideasman42, @lichtwerk
Campbell Barton was unassigned by Philipp Oeser 2019-12-18 16:16:17 +01:00
Philipp Oeser self-assigned this 2019-12-18 16:16:17 +01:00
Member

Error about extend is gone now, however Select Linked could still fail if there is an empty mesh involved in multi-user-editing...

Fix incoming...

Error about `extend` is gone now, however `Select Linked` could still fail if there is an empty mesh involved in multi-user-editing... Fix incoming...
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63407
No description provided.