Fix T63407: 'Select linked' operator in UV editor is broken in when multi-object-editing contains an empty mesh

Since BM_uv_vert_map_create would return NULL for an empty mesh, code
would then return from uv_select_linked_multi [where it should just skip
and continue instead...]

Maniphest Tasks: T63407

Differential Revision: https://developer.blender.org/D6441